# VulnGuard

./: .gitignore  README.md  TERMINAL_USAGE_GUIDE.md  USING_FORMATS.md  console_output.txt  info_output.txt  pyproject.toml  requirements.txt  run_full_audit.py  simple_audit.py  simple_info.py  simple_tools.py  temp_audit.py
src/: __init__.py  __main__.py  main.py
src/checks/: __init__.py
src/checks/android/: __init__.py  android_version_check.py  backup_check.py  base_check.py  developer_options_check.py  encryption_check.py  network_check.py  permissions_check.py  play_protect_check.py  root_check.py  screen_lock_check.py  selinux_check.py  suspicious_apps_check.py  usb_debug_check.py
src/checks/common/: __init__.py
src/checks/ios/: __init__.py  app_permissions_check.py  backup_check.py  encryption_check.py  icloud_check.py  ios_version_check.py  jailbreak_check.py  passcode_check.py
src/cli/: cli.py
src/connectors/: __init__.py  ios_connector.py
src/core/: __init__.py  enums.py  models.py  risk_score.py
src/engine/: __init__.py  audit_engine.py
src/platform/: __init__.py  detector.py
src/reporters/: __init__.py  base_reporter.py  console_reporter.py  html_reporter.py  json_reporter.py
src/utils/: __init__.py  adb_connector.py  helpers.py  logger.py
tests/: test_checks.py  test_core_models.py
